--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="browse_trainings">Przeglądaj dostępne treningi</string>
     <string name="browse_yours_trainings">Przeglądaj swoje treningi</string>
     <string name="downloading_error">Błąd podczas pobierania ćwiczeń.</string>
+    <string name="downloading_button">Pobierz</string>
 </resources>
