--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Workout-Assistant</string>
     <string name="hello_text">Witaj w Workout Assistant</string>
+
     <string name="browse_trainings">Przeglądaj dostępne treningi</string>
     <string name="browse_yours_trainings">Przeglądaj swoje treningi</string>
+
     <string name="downloading_error">Błąd podczas pobierania ćwiczeń.</string>
     <string name="downloading_button">Pobierz</string>
+    <string name="already_downloaded">Już pobrano!</string>
+    <string name="success_download">Pobrano trening.</string>
+    <string name="error_download">Wystąpił błąd podczas pobierania treningu.</string>
+
 </resources>
