--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="non_planned_training">Nie można zaplanować treningu.</string>
     <string name="browse_planned_trainings">Przeglądaj zaplanowane treningi</string>
     <string name="deletion_of_planned_trainig">Usunięto plan treningu.</string>
+
+    <string name="username">Nazwa użytkownika</string>
+    <string name="password">Hasło</string>
+    <string name="login">Zaloguj</string>
 </resources>
