--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,9 @@
 
     <string name="username">Nazwa użytkownika</string>
     <string name="password">Hasło</string>
-    <string name="login">Zaloguj</string>
+    <string name="login">Logowanie</string>
+    <string name="sign_in">Zaloguj</string>
+    <string name="registration">Rejestracja</string>
+    <string name="register">Zarejestruj</string>
+    <string name="email">Adres email</string>
 </resources>
