--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="logout">Wyloguj</string>
     <string name="web_resource">zasoby serwera</string>
     <string name="profile">Profil</string>
+    <string name="time">godzina</string>
+    <string name="date">data</string>
 </resources>
