--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="profile">Profil</string>
     <string name="time">godzina</string>
     <string name="date">data</string>
+    <string name="start">rozpocznij</string>
 </resources>
