Fix actual training status

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="time">godzina</string>
     <string name="date">data</string>
     <string name="start">rozpocznij</string>
+    <string name="continue_actual_training">Kontynuuj aktualny trening</string>
 </resources>
