--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,7 @@
     <string name="profile">Profil</string>
     <string name="time">godzina</string>
     <string name="date">data</string>
+
+    <string name="enable_gps">Włącz usługę GPS!</string>
+    <string name="check_weather_button">Sprawdź pogodę</string>
 </resources>
