forecast - wrong choosing weather

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,9 @@
 
     <string name="enable_gps">Włącz usługę GPS!</string>
     <string name="check_weather_button">Sprawdź pogodę</string>
+    <string name="forecast_temperature">Przewidywana temperatura:</string>
+    <string name="rain">Opady:</string>
+    <string name="weather_error">Błąd podczas pobierania pogody.</string>
 
     <string name="start">rozpocznij</string>
     <string name="continue_actual_training">Kontynuuj aktualny trening</string>
